--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "drizzle-orm": "^0.44.2",
     "inngest": "^3.38.0",
     "lucide-react": "^0.513.0",
-    "next": "15.4.0-canary.67",
+    "next": "^15.5.12",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "pg": "^8.16.0",
@@ -69,7 +69,7 @@
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9",
-    "eslint-config-next": "15.4.0-canary.67",
+    "eslint-config-next": "^15.5.12",
     "inngest-cli": "^1.6.3",
     "react-email": "^4.0.16",
     "tailwindcss": "^4",
