feat: profile summary

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
+    "seed": "tsx src/drizzle/seed.ts",
     "inngest": "inngest-cli dev -u http://localhost:3000/api/inngest",
     "email": "email dev --dir src/services/resend/components --port 3001"
   },
@@ -36,6 +37,7 @@
     "@t3-oss/env-nextjs": "^0.13.6",
     "@tanstack/react-table": "^8.21.3",
     "@uploadthing/react": "^7.3.1",
+    "acorn": "^8.16.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -67,12 +69,14 @@
     "@types/pg": "^8.15.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^16.4.5",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9",
     "eslint-config-next": "^15.5.12",
     "inngest-cli": "^1.6.3",
     "react-email": "^4.0.16",
     "tailwindcss": "^4",
+    "tsx": "^4.19.0",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
